[tool.poetry]
name = "reproducer"
version = "0.0.1"
description = "Reproducer for an issue happening with Spark 3.5 and Python 3.12"
authors = ["Arnaud Esteve <arnaud.esteve@shift-technology.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.12 < 3.13"
pyspark = "3.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^6.0.0"
setuptools = ">=80.9.0"
pandas = "^2.1.4"
pyarrow = "^14.0.2"
numpy = "<2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
